# SDL2_start

./: CMakeLists.txt  button.c  events.c  game_logic.c  init.c  main.c  menu.c  render.c  score.c  utils.c
include/: button.h  events.h  game_logic.h  init.h  menu.h  render.h  score.h  utils.h
